moderation for added products

--- a/TFC/imports/UI/body.html
+++ b/TFC/imports/UI/body.html
@@ -24,7 +24,6 @@
                     </a>
 
                     <a class="navbar-item" id="addProduct">Ajouter un produit</a>
-                    <a class="navbar-item" id="pending">Modération</a>
 
                     <div class="navbar-item has-dropdown is-hoverable" id="moreDropdown">
                         <a class="navbar-link">More</a>
@@ -63,6 +62,11 @@
                                         <a class="navbar-item" id="informations">
                                             <span class="icon"><i class="fas fa-user"></i></span>
                                             <span>Mes informations</span>
+                                        </a>
+                                        
+                                        <a class="navbar-item" id="moderation">
+                                            <span class="icon"><i class="fas fa-tools"></i></span>
+                                            <span>Modération</span>
                                         </a>
 
                                         <hr class="navbar-divider">
