--- a/TFC/imports/UI/productPage.html
+++ b/TFC/imports/UI/productPage.html
@@ -108,7 +108,7 @@
 
                     <button class="button">
                         <span class="icon"><i class="fas fa-edit"></i></span>
-                        <p>Proposer une modification</p>
+                        <p>Proposer des modifications</p>
                     </button>
                 </div>
             </div>
