--- a/TFC/imports/UI/user/contributions.html
+++ b/TFC/imports/UI/user/contributions.html
@@ -7,6 +7,7 @@
                 <th>Type</th>
                 <th>Élément concerné</th>
                 <th>Status</th>
+                <th>Points</th>
             </tr>
         </thead>
         <tbody>
@@ -16,6 +17,7 @@
                     <td>{{type}}</td>
                     <td class="productBanner" id="{{elementId}}">{{elementName}}</td>
                     <td class="{{statusStyle}}">{{status}}</td>
+                    <td>{{points}}</td>
                 </tr>
             {{/each}}
         </tbody>
