--- a/TFC/imports/UI/user/userProfile.html
+++ b/TFC/imports/UI/user/userProfile.html
@@ -21,6 +21,12 @@
                         <span>Mes informations</span>
                     </a>
                 </li>
+                <li id="moderation">
+                    <a>
+                        <span class="icon"><i class="fas fa-tools"></i></span>
+                        <span>Modération</span>
+                    </a>
+                </li>
                 <li class="logout">
                     <a>
                         <span class="icon"><i class="fas fa-power-off"></i></span>
