--- a/TFC/imports/UI/productPage.html
+++ b/TFC/imports/UI/productPage.html
@@ -106,7 +106,7 @@
                         <p>Signaler</p>
                     </button>
 
-                    <button class="button">
+                    <button class="button suggestChanges" id="{{_id}}">
                         <span class="icon"><i class="fas fa-edit"></i></span>
                         <p>Proposer des modifications</p>
                     </button>
