--- a/TFC/imports/UI/body.html
+++ b/TFC/imports/UI/body.html
@@ -63,7 +63,7 @@
                                             <span class="icon"><i class="fas fa-user"></i></span>
                                             <span>Mes informations</span>
                                         </a>
-                                        
+
                                         <a class="navbar-item" id="moderation">
                                             <span class="icon"><i class="fas fa-tools"></i></span>
                                             <span>Modération</span>
@@ -104,8 +104,8 @@
     </header>
 
 
-    {{> Template.dynamic template=currentMessage}}  <!-- Ddisplay the current message (if there's one) -->
-    {{> Template.dynamic template=currentModal}}  <!-- Ddisplay the current modal (if there's one) -->
+    {{> Template.dynamic template=currentMessage}}  <!-- Display the current message (if there's one) -->
+    {{> Template.dynamic template=currentModal}}  <!-- Display the current modal (if there's one) -->
     {{> Template.dynamic template=currentPage}}  <!-- Dynamic Template to display the current page -->
 
 
