add product form now display the images, return button added in edit product

--- a/TFC/imports/UI/editProduct.html
+++ b/TFC/imports/UI/editProduct.html
@@ -1,7 +1,11 @@
 <template name="editProduct">
-    <div class="container" style="border: ridge grey 0.1rem; border-bottom: none;">
-        <h3 class="title has-text-centered">Modifier le produit</h3>
-    </div>
+    <header class="card-header container" style="border: ridge grey 0.1rem; border-bottom: none;">
+        <div class="card-header-icon" id="return">
+            <span class="icon"><i class="fas fa-reply"></i></span>
+            <p>Retour</p>
+        </div>
+        <h3 class="card-header-title title is-3 is-centered" style="margin-bottom: 0;">Modifier le produit</h3>
+    </header>
     {{#if currentUser}}
         <form class="container" style="border: ridge grey 0.1rem; padding: 0.8rem;">
 
