--- a/TFC/imports/UI/addProduct.html
+++ b/TFC/imports/UI/addProduct.html
@@ -45,6 +45,7 @@
                                 <span class="coverImage file-name">Aucun fichier sélectionné</span>
                             </label>
                         </div>
+                        {{displayCoverImage}}
                     </div>
 
                     <div class="column field has-text-centered">
@@ -61,6 +62,7 @@
                                 <span class="images file-name">Aucun fichier sélectionné</span>
                             </label>
                         </div>
+                        {{displayOtherImages}}
                     </div>
                 </div>
             </section>
