--- a/TFC/imports/UI/modals/login.html
+++ b/TFC/imports/UI/modals/login.html
@@ -36,7 +36,7 @@
                     </div>
 
                     <br>
-                    <button class="button" id="forgotPassword">Mot de passe oublié</button>
+                    <p class="link has-text-weight-semibold width-fit-content" id="forgotPassword" style="background: linear-gradient(180deg, #e47312, #e47312) no-repeat 0 1.4rem;">Mot de passe oublié</p>
                 </form>
 
                 <br>
