favicon, title & instagram link added, missing db in moderation fixed

--- a/TFC/client/main.html
+++ b/TFC/client/main.html
@@ -2,5 +2,6 @@
 	<meta charset="utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script defer src="https://use.fontawesome.com/releases/v5.12.1/js/all.js"></script>
-	<title>Tech For Good</title>
+	<link rel="icon" sizes="16x16 32x32" href="/favicon.png">
+	<title>Plexar</title>
 </head>
