--- a/TFC/imports/UI/body.html
+++ b/TFC/imports/UI/body.html
@@ -134,14 +134,17 @@
 
             <div class="column" style="background-color: #f3f3f3;">
                 <p>Suivez nous sur</p>
+
+                <a class="icon is-medium" href="https://instagram.com/plexar.app" target="_blank">
+                    <img src="instagram.svg" alt="Instagram">
+                </a>
+
                 <span class="icon is-medium">
-                    <img src="instagram.svg" alt="">
+                    <img src="twitter.svg" alt="Twitter">
                 </span>
+                
                 <span class="icon is-medium">
-                    <img src="twitter.svg" alt="">
-                </span>
-                <span class="icon is-medium">
-                    <img src="linkedin.svg" alt="">
+                    <img src="linkedin.svg" alt="LinkedIn">
                 </span>
             </div>
 
