moderation moved in a different folder

--- a/TFC/imports/UI/moderation/moderation.html
+++ b/TFC/imports/UI/moderation/moderation.html
@@ -1,5 +1,5 @@
 <template name="moderation">
     {{#each displayModeration}}
-        {{> productBanner}}
+        {{> moderationBanner}}
     {{/each}}
 </template>
