images modification and about page

--- a/TFC/imports/UI/about.html
+++ b/TFC/imports/UI/about.html
@@ -1,3 +1,11 @@
 <template name="about">
+  <br/>
+    <br/>
+      <br/>
+        <h5 class="title is-5 has-text-centered">Plexar a été fondé en 2020 par 3 créateurs passionnés de l’écologie et de l’environnement.</h5>
+            <h5 class="title is-5 has-text-centered">Notre envie d’aider la planète nous as amenés à développer un site web du nom de Plexar permettant aux utilisateurs de réduire leur impact en dioxyde de carbone.</h5>
+          <br/>
+        <h2 class="title is-2 has-text-centered">Notre équipe</h2>
+      <br/>
 
 </template>
