--- a/TFC/imports/UI/home.html
+++ b/TFC/imports/UI/home.html
@@ -18,7 +18,6 @@
                             </button>
                         </div>
                     </div>
-                    
                 </form>
             </div>
         </div>
@@ -41,7 +40,7 @@
                             <div class="step-details is-primary is-completed">
                                 <p class="step-title">Ajouter</p>
                                 <span><i class="fas fa-plus-circle image is-64x64" style="display: inline;"></i></span>
-                                <p>Chacun est libre de contribuer en ajoutant des produits et ainsi partager ... avec la communauté</p>
+                                <p>Chacun est libre de contribuer en ajoutant des produits et ainsi partager leurs bons plans avec la communauté</p>
                             </div>
                         </li>
 
