--- a/TFC/imports/UI/editProduct.html
+++ b/TFC/imports/UI/editProduct.html
@@ -9,7 +9,7 @@
                 <h4 class="title is-4 has-text-centered">Informations</h4>
 
                 <div class="field has-animated-label">
-                    <input type="text" class="input has-animated-label" name="name" id="name" minlength="1" maxlength="70" placeholder=" " required >
+                    <input type="text" class="input has-animated-label" name="name" id="name" placeholder=" " required >
                     <label for="name" class="label is-animated">Nom du produit</label>
                     <span id="nameCharCounter" class="character-counter"></span>
                 </div>
@@ -17,7 +17,7 @@
 
                 <div class="field has-animated-label">
                     <div class="control has-icons-left">
-                        <textarea class="textarea has-animated-label" name="description" id="description" minlength="50" maxlength="1000" placeholder=" " required></textarea>
+                        <textarea class="textarea has-animated-label" name="description" id="description" placeholder=" " required></textarea>
                         <label for="description" class="label is-animated">Description du produit</label>
                         <span class="icon is-left">
                             <i class="fas fa-file-alt"></i>
