functions to methods in search page, refactoring categories display

--- a/TFC/imports/UI/body.html
+++ b/TFC/imports/UI/body.html
@@ -135,7 +135,7 @@
             <div class="column" style="background-color: #f3f3f3;">
                 <p>Suivez nous sur</p>
 
-                <a class="icon is-medium" href="https://instagram.com/plexar.app" target="_blank">
+                <a class="icon is-medium" href="https://instagram.com/plexar.app/" target="_blank">
                     <img src="instagram.svg" alt="Instagram">
                 </a>
 
@@ -143,9 +143,9 @@
                     <img src="twitter.svg" alt="Twitter">
                 </span>
 
-                <span class="icon is-medium">
+                <a class="icon is-medium" href="https://linkedin.com/company/plexarapp/" target="_blank">
                     <img src="linkedin.svg" alt="LinkedIn">
-                </span>
+                </a>
             </div>
 
             <div class="column" style="background-color: #f3f3f3;">
