--- a/TFC/imports/UI/productPage.html
+++ b/TFC/imports/UI/productPage.html
@@ -91,7 +91,7 @@
                     {{/if}}
 
                     <div class="tags">
-                        {{#each displayProductCategories _id}}
+                        {{#each categories}}
                             <span class="tag is-link">{{this}}</span>
                         {{/each}}
                     </div>
