adding product and display contributions switched to server methods

--- a/TFC/imports/UI/productBanner.html
+++ b/TFC/imports/UI/productBanner.html
@@ -8,7 +8,7 @@
 
             <div class="message-body">
                 <div class="field has-addons">
-                    <img src="{{displayProductFirstImage imagesID}}" alt="Image du produit" class="image is-150x150"/>
+                    <img src="{{displayProductFirstImage images}}" alt="Image du produit" class="image is-150x150"/>
                     <p id="description">{{description}}</p>
                 </div>
 
