--- a/TFC/imports/UI/user/contributions.html
+++ b/TFC/imports/UI/user/contributions.html
@@ -11,7 +11,7 @@
             </tr>
         </thead>
         <tbody>
-            {{#each displayContribution}}
+            {{#each displayContributions}}
                 <tr>
                     <td>{{date}}</td>
                     <td>{{type}}</td>
